# otcos

./: CMakeLists.txt  README.rst
cmake/: Useotcos.cmake  otcosConfig.cmake.in
conda/: README.rst  run_docker_build.sh
conda/recipe/: bld.bat  meta.yaml
distro/debian/: changelog  control  rules
distro/rpm/: otcos.spec
distro/windows/: README.txt  installer.nsi
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt
lib/include/otcos/: otcos.hxx  otcosprivate.hxx
lib/src/: CMakeLists.txt  CosineCovarianceModel.cxx
lib/src/otcos/: CosineCovarianceModel.hxx
lib/test/: CMakeLists.txt  t_CosineCovarianceModel_std.cxx  t_CosineCovarianceModel_std.expout
python/doc/: conf.py.in  index.rst
python/doc/_templates/: class.rst_t
python/doc/developer_guide/architecture/: architecture.rst
python/doc/examples/: examples.rst
python/doc/pyplots/: CosineCovarianceModel.py
python/doc/user_manual/: user_manual.rst
python/src/: CMakeLists.txt  CosineCovarianceModel.i  CosineCovarianceModel_doc.i.in  __init__.py  otcos_module.i
python/test/: CMakeLists.txt  t_CosineCovarianceModel_std.expout  t_CosineCovarianceModel_std.py  t_docstring.expout  t_docstring.py
